pratice run with tiger at pizzahut

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ URI     : https://colorlib.com
  -->
 
 <head>
-    <title>张泰 ■ Zhang Tai</title>
+    <title>Wilosophy - Your Potenial, Realised</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -60,10 +60,10 @@ URI     : https://colorlib.com
 
     <header class="bg-gradient" id="home">
         <div class="container mt-5">
-            <h1>我是张泰</h1>
+            <h1>I am Will</h1>
             <p class="tagline"> 我喜欢看书、学习<del>，考试</del>。我喜欢目前的生活、工作和身边的人，但也在为自己和别人的优质生活努力着：通过提高工作和生活的办事效率。</p>
         </div>
-        <div class="img-holder mt-3"><img src="images/zhangtai-bw.png" alt="phone" class="img-fluid"></div>
+        <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid"></div>
     </header>
 
 
