--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ URI     : https://colorlib.com
                                 <li class="nav-item"> <a class="nav-link" href="#hobby">爱好</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">联系</a> </li>
                                 <!-- <li class="nav-item"><a href="#" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Download</a></li> -->
+                                <li class="nav-item"> <a class="nav-link" href="/cn.html">CN</a> </li>
+                                
                             </ul>
                         </div>
                     </nav>
