first attempt with putting format together with images

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ URI     : https://colorlib.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
-    <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
+    <meta name="description" content="Wilosophy Coaching Landing Page">
+    <meta name="keywords" content="Coaching, Professional, Executive, Services, COnsulting, ICF, Strengths Based">
 
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -43,14 +43,13 @@ URI     : https://colorlib.com
                         <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="#home">主页<span class="sr-only">(current)</span></a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#profession">工作</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#skills">技能与成就</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#hobby">爱好</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#contact">联系</a> </li>
+                                <li class="nav-item"> <a class="nav-link active" href="#home">Home<span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="#profession">About Us</a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="#skills">Services</a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#hobby">Affiliates</a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#contact">Contact Us</a></li>
                                 <!-- <li class="nav-item"><a href="#" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Download</a></li> -->
-                                <li class="nav-item"> <a class="nav-link" href="/cn.html">CN</a> </li>
-                                
+                                <li class="nav-item"> <a class="nav-link" href="/cn.html">中文</a> </li>
                             </ul>
                         </div>
                     </nav>
@@ -62,10 +61,11 @@ URI     : https://colorlib.com
 
     <header class="bg-gradient" id="home">
         <div class="container mt-5">
-            <h1>I am Will Sung</h1>
-            <p class="tagline"> 我喜欢看书、学习<del>，考试</del>。我喜欢目前的生活、工作和身边的人，但也在为自己和别人的优质生活努力着：通过提高工作和生活的办事效率。</p>
+            <h1>Most successful people have a Coach</h1>
+            <h1>Isn't it about time you had one too</h1>
+            <p class="tagline">Invest In Yourself</p>
         </div>
-        <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid"></div>
+        <div class="img-holder mt-5"><img src="images/WilosophyBanner.png" alt="phone" class="img-fluid"></div>
     </header>
 
 
@@ -127,7 +127,7 @@ URI     : https://colorlib.com
 
         <div class="client-logos my-5">
                 <div class="container text-center">
-                    <img src="images/logos.png" alt="client logos" class="img-fluid">
+                    <img src="images/WilosophyBanner.jpg" alt="client logos" class="img-fluid">
                 </div>
             </div>
 
